--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "sass": "^1.56.1",
         "tailwindcss": "^3.4.13",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "leaflet": "^1.9.4",
+        "leaflet-draw": "^1.0.4"
     }
 }
